noinst_LTLIBRARIES=libmod_mysql_common.la
libmod_mysql_common_la_SOURCES= \
	common.h \
	safety.h \
	mod_mysql_list.h \
	mod_mysql_collection.h \
	mod_mysql_iterator.h \
	mod_mysql_table.h \
	mod_mysql_array.h \
	mod_mysql_array_list.h \
	mod_mysql_comparator.h \
	mod_mysql_ranged_ref.h \
	mod_mysql_opaque_cp.h \
	mod_mysql_base.h \
	mod_mysql_delegates.h \
	mod_mysql_error.h \
	mod_mysql_exception.h \
	mod_mysql_hash_table.h \
	mod_mysql_logger.h \
	mod_mysql_logger.cpp \
	mod_mysql_bucket_brigade.h \
	mod_mysql_bucket_brigade.cpp \
	mod_mysql_bucket.h \
	mod_mysql_bucket_factory.h \
	mod_mysql_pool.h \
	mod_mysql_pool.cpp \
	mod_mysql_locale.h \
	mod_mysql_codeset.h \
	mod_mysql_collation.h \
	mod_mysql_collation.cpp \
	mod_mysql_charset.h \
	mod_mysql_charset.cpp \
	mod_mysql_encoding.h \
	mod_mysql_locale_registry.h \
	mod_mysql_utils.h \
	mod_mysql_utils.cpp \
	mod_mysql_row_set.h \
	mod_mysql_row.h \
	mod_mysql_row.cpp \
	mod_mysql_field_info.h \
	mod_mysql_fields.h \
	mod_mysql_fields.cpp \
	mod_mysql_field_value.h \
	mod_mysql_field_value.cpp \
	mod_mysql_column.h \
	mod_mysql_capabilities.h \
	mod_mysql_command.h \
	mod_mysql_client_info.h \
	mod_mysql_server_message.h \
	mod_mysql_result.h \
	mod_mysql_result.cpp \
	mod_mysql_instantiable.h \
	mod_mysql_memblock.h \
	mod_mysql_memblock_manager.h \
	mod_mysql_ptr_map.h \
	mod_mysql_allocator.h \
	mod_mysql_invalid_argument_exception.h \
	mod_mysql_data_output.h \
	mod_mysql_data_buffer.h \
	mod_mysql_statement_params.h \
	mod_mysql_statement_params.cpp \
	mod_mysql_statement_param.h \
	mod_mysql_decimal.h \
	mod_mysql_decimal.cpp \
	mod_mysql_static_opaque_data.h \
	mod_mysql_static_opaque_data.cpp
libmod_mysql_common_la_LIBADD=@LIBS@
INCLUDES=@INCLUDES@
